tests/NormalTests/paczka1/fuzzy1/45278056.err
Error in line 2: MgLz S422 63,7
Error in line 8: S99 S99 30,7
Error in line 15: MNYjFsZ5p S99 87,7
Error in line 31: S99 S377 397,64
